--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -8,13 +8,6 @@ pipelineConfig:
         stages:
         - name: "continuous-integration"
           steps:
-          - command: ls
-            args:
-            - -laR
-          - command: pwd
-          - command: cd
-            args:
-            - /workspace/workspace/prow
           - command: make
             args:
             - build
@@ -26,10 +19,35 @@ pipelineConfig:
           image: gcr.io/jenkinsxio/builder-jx:0.1.289
         stages:
           - name: "continuous-integration"
-            steps:
-          - command: cd
+          steps:
+          - image: jenkinsxio/jx:1.3.963
+            command: jx
             args:
-            - prow
+              - step
+              - credential
+              - -s
+              - jenkins-x-chartmuseum
+              - -k
+              - BASIC_AUTH_USER
+              - -f
+              - /builder/home/basic-auth-user.json
+          - command: export
+              args:
+                - CHARTMUSEUM_CREDS_USR=`cat /builder/home/basic-auth-pass.json`
+          - image: jenkinsxio/jx:1.3.963
+            command: jx
+            args:
+              - step
+              - credential
+              - -s
+              - jenkins-x-chartmuseum
+              - -k
+              - BASIC_AUTH_PASS
+              - -f
+              - /builder/home/basic-auth-pass.json
+          - command: export
+            args:
+            - CHARTMUSEUM_CREDS_PSW=`cat /builder/home/basic-auth-pass.json`
           - command: make
             args:
             - release
