--- a/prow/Makefile
+++ b/prow/Makefile
@@ -2,6 +2,9 @@ CHART_REPO := http://jenkins-x-chartmuseum:8080
 NAME := prow
 OS := $(shell uname)
 
+CHARTMUSEUM_CREDS_USR := `cat /builder/home/basic-auth-pass.json`
+CHARTMUSEUM_CREDS_PSW := `cat /builder/home/basic-auth-pass.json`
+
 init: 
 	helm init --client-only
 
